--- a/static/css/signUp.css
+++ b/static/css/signUp.css
@@ -3,6 +3,15 @@ body {
     line-height: 1.6;
     font-family: "Helvetica Neue", Helvetica, Arial, "Microsoft YaHei", sans-serif;
 }
+.weui_cell_warn {
+    color: red;
+}
+.weui_cell_warn .weui_icon_warn {
+    display: inline-block;
+}
+.weui_icon_warn {
+    display: none;
+}
 .container {
     overflow: hidden;
 }
